force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__AchievedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AchievedDate__c</fullName>
    <label>Achieved Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AchievedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>