force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__CredentialNameText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CredentialNameText__c</fullName>
    <label>Credential Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CredentialNameText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>