force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__CredentialType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CredentialType__c</fullName>
    <label>Credential Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CredentialType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>