force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__IssuerNameText__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssuerNameText__c</fullName>
    <label>Issuer Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssuerNameText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>