force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__LearnerContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearnerContactId__c</fullName>
    <label>Learner Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearnerContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>