force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__rel_1719817602130_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817602130_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonAcademicCredential_AcademicCre_rel</label>
    <referenceTo>ssot__AcademicCredential__dlm</referenceTo>
    <relationshipLabel>PersonAcademicCredential_AcademicCre_rel</relationshipLabel>
    <relationshipName>rel_1719817602130_end</relationshipName>
    <type>Lookup</type>
</CustomField>