force-app/main/default/objects/ssot__PersonAcademicCredential__dlm/fields/ssot__rel_1720291158692_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291158692_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonAcademicCredential_LearnerCont_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonAcademicCredential_LearnerCont_rel</relationshipLabel>
    <relationshipName>rel_1720291158692_end</relationshipName>
    <type>Lookup</type>
</CustomField>